grammar.js
    source_file: $ => seq(
      repeat($._statement_delimeter),
      repeat($._statement)
    ),

    _statement: $ => seq(
      $.statement,
      repeat1($._statement_delimeter)
    ),

    _statement_delimeter: $ => choice(
      ';',
      $._newline,
      alias($._newline_and_comment, $.comment),
    ),

    type_declaration: $ => seq(
      optional('export'),
      'type',
      optional('rec'),
      $._type_declaration,
    ),

    _type_declaration: $ => seq(
      $.type_identifier,
      optional($.type_parameters),
      optional(seq(
        choice('=', '+='),
        optional('private'),
        $._type,
        repeat(alias($._type_declaration_and, $.type_declaration)),
      )),
    ),

    type_annotation: $ => seq(
      ':',
      repeat($.decorator),
      $._inline_type,
    ),

    _inline_type: $ => choice(
      $._non_function_inline_type,
      $.function_type,
    ),

    record_type: $ => seq(
      '{',
      commaSep1t($.record_type_field),
      '}',
    ),

    record_type_field: $ => seq(
      repeat($.decorator),
      optional('mutable'),
      alias($.value_identifier, $.property_identifier),
      optional('?'),
      optional($.type_annotation),
    ),

    _let_custom: $ => seq('let.', $._word),

    let_binding: $ => seq(
      choice('export', 'let', $._let_custom),
      optional('rec'),
      $._let_binding,
    ),

    _let_binding: $ => seq(
      $._binding_pattern,
      optional($.type_annotation),
      optional(seq(
        '=',
        repeat($.decorator),
        $.expression,
        repeat(alias($._let_binding_and, $.let_binding)),
      )),
    ),

    expression_statement: $ => $.expression,

    parenthesized_expression: $ => seq(
      '(',
      choice(
        seq(repeat($.decorator), $.expression, optional($.type_annotation)),
        $._operator_as_value
      ),
      ')'
    ),

    value_identifier_path: $ => seq(
      repeat1(seq($.module_identifier, '.')),
      $.value_identifier,
    ),

    function: $ => prec.left(seq(
      optional('async'),
      choice(
        field('parameter', $.value_identifier),
        $._definition_signature
      ),
      '=>',
      repeat($.decorator),
      field('body', $.expression),
    )),

    array: $ => seq(
      '[|',
      commaSept($.expression),
      '|]'
    ),

    call_expression: $ => prec('call', seq(
      field('function', $.primary_expression),
      field('arguments', alias($.call_arguments, $.arguments)),
    )),

    _definition_signature: $ => seq(
      field('parameters', $.formal_parameters),
      optional(field('return_type', alias($._return_type_annotation, $.type_annotation))),
    ),

    formal_parameters: $ => seq(
      '(',
      optional(commaSep1t($.parameter)),
      ')'
    ),

    parameter: $ => seq(
      optional($.uncurry),
      choice(
        $._pattern,
        $.labeled_parameter,
        $.unit,
        $.type_parameter,
      ),
    ),

    _pattern: $ => prec.dynamic(-1, seq(
      barSep1(choice(
        $.value_identifier,
        $._literal_pattern,
        $._destructuring_pattern,
        $.polyvar_type_pattern,
        $.unit,
        $._parenthesized_pattern
      )),
      optional($.type_annotation),
      optional($.as_aliasing),
    )),

    decorator: $ => seq(
      '[@',
      $.decorator_identifier,
      optional($.decorator_arguments),
      ']'
    ),

    type_identifier: $ => choice(
      /[a-z_'][a-zA-Z0-9_]*/,
      $._escape_identifier,
    ),

    value_identifier: $ => choice(
      /[a-z_][a-zA-Z0-9_']*/,
      $._escape_identifier,
    ),

    _escape_identifier: $ => token(seq('\\"', /[^"]+/ , '"')),

    module_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    decorator_identifier: $ => /[a-zA-Z0-9_\.]+/,

    number: $ => {
      const hex_literal = seq(
        choice('0x', '0X'),
        /[\da-fA-F](_?[\da-fA-F])*/
      )

      const decimal_digits = /\d(_?\d)*/
      const signed_integer = seq(optional(choice('-', '+')), decimal_digits)
      const exponent_part = seq(choice('e', 'E'), signed_integer)

      const binary_literal = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/)

      const octal_literal = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/)

      const bigint_literal = seq(choice(hex_literal, binary_literal, octal_literal, decimal_digits), 'n')

      const decimal_integer_literal = choice(
        '0',
        seq(optional('0'), /[1-9]/, optional(seq(optional('_'), decimal_digits)))
      )

      const decimal_literal = seq(
        optional(choice('-', '+')),
        choice(
          seq(decimal_integer_literal, '.', optional(decimal_digits), optional(exponent_part)),
          seq('.', decimal_digits, optional(exponent_part)),
          seq(decimal_integer_literal, exponent_part),
          seq(decimal_digits),
        )
      )

      const int64 = seq(
        optional(choice('-', '+')),
        choice(decimal_integer_literal, binary_literal, octal_literal, hex_literal),
        'L'
      )

      return token(choice(
        hex_literal,
        decimal_literal,
        binary_literal,
        octal_literal,
        bigint_literal,
        int64
      ))
    },

    _operator_as_value: _ => /[^a-zA-Z0-9)(]+/,
    character: $ => seq(
      "'",
      choice(/[^\\']/, $.escape_sequence),
      "'"
    ),
